# convAST

./: Makefile  README.md  pyproject.toml
.github/workflows/: pylint.yml
convast/: __init__.py  cli.py  convast.py  schema.py  utils.py  version.py
convast/schema/: NCBI_schema.yaml  ena_insdc_format.yml
tests/data/: sensititre_output.txt  vitek_output.txt
