[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convast"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]
authors = [
    {name = "Finlay Maguire", email = "finlaymaguire@gmail.com"},
    {name = "Amos Raphenya", email = "raphenya@gmail.com"},]
requires-python = ">=3.8"
dependencies = [
  # Add your own dependencies here
]
license = {file = "LICENSE"}

[project.scripts]
convast = "convast.cli:main"

[project.urls]
Homepage = "https://github.com/pha4ge/convast"
Repository = "https://github.com/pha4ge/convast"
Changelog = "https://github.com/pha4ge/convast/blob/main/CHANGELOG.md"
# Documentation = "https://my-package.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff",
    "black>=23.0,<24.0",
    "pytest",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "packaging"
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "convast.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 115
disable = """
logging-fstring-interpolation
"""

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
